Fix stretched images.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,8 +289,7 @@ a {
 .card > img {
   width: 75px;
   height: 75px;
-
-  /* padding-right: 20px; */
+  object-fit: cover;
 }
 
 .card {
